<resources>
    <string name="app_name">RawtoDispatch</string>
    <string name="hint_vehicle">Vehicle Number</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_receipt">L/R Number</string>
    <string name="hint_charges">Charges</string>
    <string name="hint_other">Other </string>
    <string name="hint_date">Date</string>
    <string name="hint_source">Source</string>
    <string name="hint_destination">destination</string>
    <string name="edit_raw_title">Raw Entry</string>
    <string name="edit_finish_title">Finished Entry</string>
    <string name="edit_dispatch_title">Dispatch Entry</string>

    <string name="settings_title">Settings</string>

    <string name="setting_app_category">App Settings</string>

    <string name="display_category">Display</string>
    <string name="order_by_title">Order By</string>
    <string name="order_by_key">order_by</string>
    <string name="order_by_default" translatable="false">@string/order_by_asc_value</string>


    <string name="order_by_asc_label">Acending</string>
    <string name="order_by_asc_value" translatable="false">ASC</string>

    <string name="order_by_desc_label">Descending</string>
    <string name="order_by_desc_value" translatable="false">DESC</string>

    <!--CheckBox prefrences-->
    <string name="auto_sync_title">Autosync Files</string>
    <string name="auto_sync_key">autosync_key</string>
    <string name="auto_sync_dafault_value">true</string>


    <string name="auto_sync_period_choose_title">Auto Sync Interval</string>
    <string name="auto_sync_period_choose_key">interval_sync</string>
    <string name="auto_sync_period_choose_default" translatable="false">@string/auto_sync_period_weekly</string>

    <string name="auto_sync_period_weekly">Weekly</string>
    <string name="auto_sync_period_weekly_value" translatable="false">week</string>

    <string name="auto_sync_period_monthly">Monthly</string>
    <string name="auto_sync_period_monthly_value" translatable="false">month</string>

    <!--Fragement Titles-->
    <string name="raw_fragment">Raw</string>
    <string name="finish_fragment">Finish</string>
    <string name="dispatch_fragment">Dispatch</string>
    <string name="dash_fragment">Dash</string>


    <!--SnackBar messages-->
    <string name="snack_bar_go_to_the_settings_message">Go to the settings to grant the permissions</string>
    <string name="snack_bar_permission_request_message">This app needs Storage and Accounts permission</string>
    <string name="snack_bar_unable_to_get_permission"></string>
    <string name="snack_bar_ok_button">OK</string>

    <!--Alert Dialog-->
    <string name="alert_message">"Are you sure want to leave ?"</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>


    <!--Validation Error Messages-->
    <string name="vehicle_edittext_error">Vehicle number cannot be null</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
