<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.rawtodispatch.EditActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
       >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/colorAccent">
            <EditText
                android:id="@+id/input_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vehicle"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">
            <EditText
                android:id="@+id/input_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">
            <EditText
                android:id="@+id/input_lr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_receipt"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/inputLayout_other"
                android:layout_alignParentLeft="true"
                android:nextFocusLeft="@id/inputLayout_other"
                android:nextFocusUp="@id/inputLayout_other"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/colorAccent">
                <EditText
                    android:id="@+id/input_charges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_charges"
                    android:inputType="number"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_other"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColorHint="@color/colorAccent"
                >
                <EditText
                    android:id="@+id/input_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_other"
                    android:inputType="number"
                    android:gravity="start"
                    android:layout_gravity="start" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout_for_sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/inputLayout_destination"
                android:layout_alignParentLeft="true"
                android:nextFocusLeft="@id/inputLayout_destination"
                android:nextFocusUp="@id/inputLayout_destination"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/colorAccent">
                <EditText
                    android:id="@+id/input_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_source"
                    android:inputType="text"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_destination"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColorHint="@color/colorAccent"
                >
                <EditText
                    android:id="@+id/input_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_destination"
                    android:inputType="text"
                    android:gravity="start"
                    android:layout_gravity="start" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">
            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:focusable="false"
                android:inputType="date"
                android:imeOptions="actionDone"
                android:nextFocusLeft="@id/input_date"
                android:nextFocusUp="@id/input_date" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Submit"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>